heavy warning cleanup